# new_ur5e_ws

./: .gitignore
src/my_ur5e_control/: CMakeLists.txt  package.xml
src/my_ur5e_control/launch/: demo.launch.py  demo2.launch.py  rsp.launch.py  start_robot.launch.py
src/my_ur5e_control/rviz/: ur5e_soft_hand.rviz
src/my_ur5e_control/urdf/: my_ur5e_controlled.urdf.xacro
src/my_ur5e_description/: CMakeLists.txt  package.xml
src/my_ur5e_description/launch/: view_ur5e_soft_hand.launch.py
src/my_ur5e_description/rviz/: ur5e_soft_hand.rviz
src/my_ur5e_description/urdf/: initial_positions.yaml  ur.urdf.xacro  ur5e_soft_hand.urdf.xacro  ur5e_soft_hand_macro.urdf.xacro
src/my_ur5e_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/my_ur5e_moveit/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  my_robot_cell.urdf.xacro  ros2_controllers.yaml
src/my_ur5e_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  start.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/my_ur5e_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
src/my_ur5e_moveit2/config/: moveit_controllers.yaml  my_robot_cell.ros2_control.xacro  my_robot_cell.srdf
src/my_ur5e_moveit2/launch/: move_group.launch.py  rsp.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
